shifted login details to mongoDB database

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,5 +1,4 @@
 REACT_APP_API_URL = "http://127.0.0.1:8081"
-
 PORT = 8081
 PGUSER = postgres
 PGHOST = localhost
@@ -7,3 +6,4 @@ PGPASSWORD = 3766
 PGDATABASE = Account_manager
 PGPORT = 5432
 NODE_ENV=production
+MONGO_URI = "mongodb://127.0.0.1:27017/trial"
