--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,6 +19,8 @@
     "html-pdf": "^3.0.1",
     "joi": "^17.8.3",
     "jsonwebtoken": "^9.0.0",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.11.0",
     "pg-hstore": "^2.3.4",
