added support for docker and removed unnecessary code

--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -1,32 +1,44 @@
-FROM node:18 AS Production
+FROM node:18.20.3
+
+# Install necessary dependencies for Puppeteer and Chromium
+RUN apt-get update && apt-get install -y --no-install-recommends \
+  fonts-liberation \
+  libasound2 \
+  libatk-bridge2.0-0 \
+  libatk1.0-0 \
+  libcups2 \
+  libdrm2 \
+  libgbm1 \
+  libgtk-3-0 \
+  libnspr4 \
+  libnss3 \
+  libx11-xcb1 \
+  libxcomposite1 \
+  libxdamage1 \
+  libxrandr2 \
+  xdg-utils \
+  libu2f-udev \
+  libxshmfence1 \
+  libglu1-mesa \
+  chromium \
+  && apt-get clean \
+  && rm -rf /var/lib/apt/lists/*
+
+ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true
+ENV PUPPETEER_EXECUTABLE_PATH="/usr/bin/chromium"
+
 
 WORKDIR /user/src/server
 
 COPY package.json .
 COPY package-lock.json .
 
-
-RUN npm install --force 
-
+# Install your app here...
+RUN npm install 
 
 COPY . .
 
-# RUN npm install -g html-pdf
-RUN apt-get update && apt-get install -y \
-    libx11-dev \
-    libxkbfile-dev \
-    libsecret-1-dev \
-    libnss3-dev \
-    libasound2-dev \
-    libgtk-3-0 \
-    libxss1 \
-    libxtst6 \
-    libgbm-dev \
-    && rm -rf /var/lib/apt/lists/*
-
-
-# RUN chmod +x /user/src/server/app/phantomjs-2.1.1-macosx/bin/phantomjs
-
+# RUN chmod 
 EXPOSE 8081
 
 # RUN npm run build
