--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,45 +1,41 @@
 version: "3.9" 
 
 services:
-  postgres:
-    image: postgres:15.2  
-    environment:
-      - POSTGRES_HOST=localhost
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=3766
-      - POSTGRES_DB=Account_manager
-    ports:
-      - "5432:5432"
-    networks:
-      - shared-network
+  mongo:
+    container_name: mongodb-docker
+    image: mongodb/mongodb-community-server:latest
     volumes:
-      - ./postgres-db:/var/lib/postgresql/data
+      - data-volume:/data/db
+    ports:
+      - "27017:27017"
+    networks:
+      - app-network
     
   Backend:
-    container_name: account_manager_api
+    container_name: backend-account-manager
     restart: unless-stopped
-    image: account-manager-api-prod:1.0.0
+    image: backend-account-manager
     build: ./Backend
     ports:
       - 8081:8081
     volumes:
-      - ./Backend:/app
+      - ./Backend:/user/src/server
       - /app/node_modules
       - ./Backend:/app:/controllers
       - ./Backend:/app:/documents
     networks:
-      - shared-network
+      - app-network
     environment:
-       DATABASE_URL: postgres://postgres:3766@db:5432/Account_manager
-       PSQL_HOST: postgres
-    depends_on:
-      - postgres
+      - NODE_ENV:production
+    env_file: ./Backend/.env
+    depends_on: 
+      - mongo
 
 
   frontend:
-    container_name: account_manager_client
+    container_name: frontend-account-manager
     restart: unless-stopped
-    image: account-manager-client-prod:1.0.0
+    image: frontend-account-manager
     build: ./frontend
     volumes:
       - ./frontend:/src
@@ -49,20 +45,17 @@ services:
     ports:
       - 3000:3000
     networks:
-      - shared-network
+      - app-network
     depends_on:
       - Backend
-
-    
-  pg-admin:
-    image: dpage/pgadmin4
-    environment:
-      - PGADMIN_DEFAULT_EMAIL=keyurnagar9453@gmail.com
-      - PGADMIN_DEFAULT_PASSWORD=3766
-      - PGADMIN_LISTEN_PORT=5050
-    ports:
-      - "5050:5050"
       
-
 networks:
-  shared-network:
+  app-network:
+    driver: bridge
+
+volumes:
+  data-volume:
+  node_modules:
+  web-root:
+    driver: local
+
