--- a/Backend/.env
+++ b/Backend/.env
@@ -6,4 +6,4 @@ PGPASSWORD = 3766
 PGDATABASE = Account_manager
 PGPORT = 5432
 NODE_ENV=production
-MONGO_URI = "mongodb://127.0.0.1:27017/trial"
+MONGO_URI = "mongodb://mongo:27017/account-manager"
