--- a/Backend/package.json
+++ b/Backend/package.json
@@ -16,16 +16,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "html-pdf": "^3.0.1",
     "joi": "^17.8.3",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
-    "pg": "^8.11.0",
-    "pg-hstore": "^2.3.4",
-    "puppeteer": "^20.2.0",
-    "sequelize": "^6.31.1",
-    "sequelize-cli": "^6.6.0"
+    "puppeteer": "^20.2.0"
   }
 }
