--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,12 +1,14 @@
-FROM node:18.12.1 AS Production
+FROM node:18.20.3 AS Production
 
-WORKDIR /user/src/client
+WORKDIR /user/src/client 
 
 COPY package.json .
 COPY package-lock.json .
 
 RUN npm install --force
 COPY . .
+
+RUN npm run build
 
 EXPOSE 3000
 # RUN npm run build
